Fix the missing styles for dark mode

--- a/src/Resources/public/backend.css
+++ b/src/Resources/public/backend.css
@@ -19,7 +19,7 @@
 }
 
 .cfg-tags-all span:hover {
-    background: #589b0e;
+    background: #589b0e !important;
     color: #fff;
 }
 
@@ -32,7 +32,43 @@
 }
 
 .cfg-tags .selectize-control.multi .selectize-input > div:hover {
-    background: #c33;
+    background: #c33 !important;
     color: #fff;
 }
 
+/* Dark scheme */
+html[data-color-scheme="dark"] .cfg-tags-all span,
+html[data-color-scheme="dark"] .selectize-dropdown-header,
+html[data-color-scheme="dark"] .selectize-control.single .selectize-input.input-active {
+    background: #292c32;
+}
+
+html[data-color-scheme="dark"] .selectize-input,
+html[data-color-scheme="dark"] .selectize-dropdown {
+    background: #151619;
+    border-color: #44464b;
+}
+
+html[data-color-scheme="dark"] .selectize-input.dropdown-active::before {
+    background-color: #44464b;
+}
+
+html[data-color-scheme="dark"] .selectize-dropdown,
+html[data-color-scheme="dark"] .selectize-input,
+html[data-color-scheme="dark"] .selectize-input input {
+    color: var(--text);
+}
+
+html[data-color-scheme="dark"] .selectize-dropdown .active {
+    background: #1b1d21;
+    color: #fff;
+}
+
+html[data-color-scheme="dark"] .cfg-tags .selectize-control.multi .selectize-input > div {
+    background: #292c32;
+    color: var(--text);
+}
+
+html[data-color-scheme="dark"] .selectize-control.plugin-drag_drop.multi > .selectize-input > div.ui-sortable-placeholder {
+    background: #292c32 !important;
+}
